@@ -252,6 +252,26 @@
 					</filesets>
 				</configuration>
 			</plugin>
+	        <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-compiler-plugin</artifactId>
+	            <version>3.8.0</version>
+	            <configuration>
+	                <!-- 1.10, 11, 12, 13-->
+	                <release>13</release>
+	                <compilerArgs>
+	                    --enable-preview
+	                </compilerArgs>
+	            </configuration>
+	        </plugin>
+	        <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-surefire-plugin</artifactId>
+	            <version>3.0.0-M3</version>
+	            <configuration>
+	                <argLine>--enable-preview</argLine>
+	            </configuration>
+	        </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
